<resources>
    <string name="app_name">Quiz</string>
    <string name="hint_text">Name</string>
    <string name="welcome">Welcome</string>
    <string name="enter_name">Please enter your name.</string>
    <string name="quiz_title">Country Flag Quiz</string>
    <string name="start_btn_txt">Start</string>
    <string name="submit_btn_txt">Submit</string>
    <string name="next_btn_txt">Go to next question</string>
    <string name="finish_btn_txt">Finish</string>
    <string name="img_description">image</string>
    <string name="result_txt">Result</string>
    <string name="good_luck_txt">Good luck next time, Francisco!</string>
    <string name="score_txt">Your score is 1 out of 10.</string>
    <string name="try_again_txt">Try again</string>


</resources>