<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_bg"
    tools:context=".ResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_txt"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/result_iv"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        tools:src="@drawable/ic_sweat_face"
        android:contentDescription="@string/img_description"
        />

    <TextView
        android:id="@+id/msg_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="@string/good_luck_txt"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        tools:text="@string/score_txt"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/try_again_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/tcu_purple"
        app:cornerRadius="0dp"
        android:text="@string/try_again_txt"/>





</LinearLayout>