<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:gravity="center"

    tools:context=".MainActivity">


    <TextView
      android:layout_gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
      android:text="@string/quiz_title"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp">


        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/WelcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="35sp"
                android:textStyle="bold"
                android:paddingTop="18dp"
                android:textColor="@color/black"
                android:text="@string/welcome"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="18dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/enter_name"/>


            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:hint="@string/hint_text"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:imeOptions="actionGo"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    tools:ignore="TextContrastCheck">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/start_btn"
                android:layout_width="320dp"
                android:layout_margin="10dp"
                android:layout_height="60dp"
                app:cornerRadius="0dp"
                android:backgroundTint="@color/tcu_purple"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:text="@string/start_btn_txt">

            </Button>








        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>